--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,14 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import "./general.css";
+@import "./header.css";
+@import "./footer.css";
+@import "./index.css";
+@import "./login.css";
+@import "./user.css";
+@import "./register.css";
+@import "./form.css";
 
-a {
-  color: #00B7FF;
-}
+
+
+
+
