--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
-<!-- head -->
-  <%- include('./partials/head') %> 
+  <!-- head -->
+  <%- include('./partials/head') %>
 
-  <body> 
+  <body>
     <!-- header -->
-    <%- include('./partials/header') %> 
+    <%- include('./partials/header') %>
     <main class="main_user">
       <% if (locals.userLogin) { %>
-        <h4>Bienvenid@: <%= userLogin.name %></h4>
+      <h2>Bienvenid@: <%= userLogin.name %> estas son tus Notas:</h2>
+      <section>
+    
+        <article>
+          <% notesUser.forEach(element => { %>
+          <ul>
+            <li class="list">
+              <a href="#">
+                <p class="numList"><%= element.id %> - </p><p class="titleList"><%= element.title %></p>
+                <p class="viewTitleList"><i class="fa-solid fa-circle-plus"></i> VER</p>
+              </a>
+            </li>
+          </ul>
 
-       <h4>Notas</h4>
-       <% notesUser.forEach(element => { %>
-        <h5> <%= element.title %></h5> <br>
-        <p><%= element.note %><br></p>
-       <% }) %>
-       
+          <% }) %>
+        </article>
+      </section>
 
-        
       <% } %>
       <ul>
-        <li><a href="/user/createNote">Crear Nota! <span>+</span></a></li>
+        <li>
+          <a href="/user/createNote">Crear Nota! <span>+</span></a>
+        </li>
       </ul>
     </main>
 
-    <%- include('./partials/footer') %> 
-  <script src="/javascripts/index.js"></script>
-  <script src="/javascripts/user.js"></script>
+    <%- include('./partials/footer') %>
+    <script src="/javascripts/index.js"></script>
+    <script src="/javascripts/user.js"></script>
   </body>
-  </html>
+</html>
