--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -1,11 +1,13 @@
 label{
     font-weight: 900;
+    font-size: 20px;
 
 }
 input{
     border-radius: 5px;
     border:none;
-    padding:2px
+    padding:2px;
+    font-size: 20px;
 
 }
 button{
@@ -13,6 +15,7 @@ button{
     font-weight: 900;
     padding:5px;
     border-radius: 5px;
+    font-size: 20px;
     cursor: pointer;
 }
 
