--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,8 @@
 .index_main p{
-        padding: 25px;
+        padding: 15px;
         font-weight: 700;
         text-align: center;
+      font-size: 20px;
     
 }
 
