--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
           <input type="password" name="password" id="password" />
         </div>
         <div>
-          <label for="password2">Confirma contraseña: </label>
+          <label for="password2">Confirmar contraseña: </label>
           <input type="password" name="password2" id="password2" />
         </div>
         <div class="buton_box">
