--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,9 +8,9 @@
   <section>
     <div class="header_burger"><i class="fa-solid fa-bars"></i></div>
       <ul class="header_menu">
-        <li><a href="/user/login"><i class="fa-solid fa-user"></i>LOGIN</a></li>
-        <li><a href="/user/register"><i class="fa-solid fa-id-card"></i>REGISTER</a></li>
-        <li><a href="/user"><i class="fa-solid fa-file-lines"></i>NOTES</a></li>
+        <li><a href="/user/login"><i class="fa-solid fa-user"></i>INGRESAR</a></li>
+        <li><a href="/user/register"><i class="fa-solid fa-id-card"></i>REGISTRARME</a></li>
+        <li><a href="/user"><i class="fa-solid fa-file-lines"></i>MIS NOTAS</a></li>
       </ul>
   </section>
 
