--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -26,6 +26,18 @@ button{
     
     }
     button{
-        font-size: 20px;
+        font-size: 20px
+        
     }
+    label{
+        font-weight: 900;
+        font-size: 18px;
+    
+    }
+    input{
+    
+        font-size: 16px;
+    
+    }
+   
 }
