--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -3,9 +3,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Indie Flower', cursive;
+
 }
 
 body {
+
     background-image: url('/images/fondoLapices.jpg');
     background-size:contain;
 
@@ -25,7 +27,7 @@ li{
 }
 main{
     border-radius:0 0 25px 25px;
-    height: 85%;
+    height: 88%;
     position: fixed;
    top: 75px;
    width: 95%;
@@ -39,5 +41,7 @@ main{
 }
 
 @media (min-width: 768px) {
-
+main{
+    height: 85%;
+}
 }
