--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -19,7 +19,18 @@
        margin: 8px;
     
     }
-
+.main_register form div span{
+    color: red;
+    text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;    font-weight: 900;
+    margin-top: 2px;
+    margin-bottom: -5px;
+    background-color: rgba(0, 0, 0, 0.507);
+    border-radius: 25px;
+    position: relative;
+    font-size: 12px;
+    
+}
     @media (min-width: 768px) {
         .main_register h3{
            font-size: 30px;
