--- a/views/editNote.ejs
+++ b/views/editNote.ejs
@@ -9,10 +9,10 @@
     <main class="main_createNote">
       <form id="formCreate" method="POST">
         <div>
-          <input type="text" name="title" id="title" placeholder="Aqui ingresa el titulo"/>
+          <input type="text" name="title" id="title" value="<%= note.title %>"/>
         </div>
         <div>
-          <textarea name="note" id="note" cols="30" rows="10" placeholder="Aqui escribe tu nueva nota"></textarea>
+          <textarea name="note" id="note" cols="30" rows="10"><%= note.note %></textarea>
         </div>
         <div>
           <button id="saveNote" type="submit">Guardar</button>
