--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,22 +8,26 @@
     <main class="main_register">
       <h3>Registrate!</h3>
 
-      <form method="POST">
+      <form id="formRegister" method="POST">
         <div>
           <label for="name">Nombre: </label>
           <input type="text" name="name" id="name" />
+          <span id="nameError"></span>
         </div>
         <div>
           <label for="email">Correo: </label>
           <input type="email" name="email" id="email" />
+          <span id="emailError"></span>
         </div>
         <div>
           <label for="password">Contraseña: </label>
           <input type="password" name="password" id="password" />
+          <span id="passwordError"></span>
         </div>
         <div>
           <label for="password2">Confirmar contraseña: </label>
           <input type="password" name="password2" id="password2" />
+          <span id="password2Error"></span>
         </div>
         <div class="buton_box">
             <button type="submit">Enviar</button>
