--- a/views/createNote.ejs
+++ b/views/createNote.ejs
@@ -11,7 +11,7 @@
         <div>
           <input type="text" name="title" id="title" placeholder="Aqui ingresa el titulo"/>
         </div>
-        <div>
+        <div class="boxTextarea">
           <textarea name="note" id="note" cols="30" rows="10" placeholder="Aqui escribe tu nueva nota"></textarea>
         </div>
         <div>
