--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,6 +18,11 @@
         <br>
         <button type="submit">Ingresar</button>
       </form>
+      <div>
+        <h4>Aun no tienes cuenta?</h4>
+      <a href="/user/register">Registrate !</a>
+      </div>
+      
       <%= locals.error %>
     </main>
     <%- include('./partials/footer') %> 
