--- a/views/user.ejs
+++ b/views/user.ejs
@@ -34,7 +34,7 @@
       <% } %>
       <ul>
         <li>
-          <a class="agregarNota" href="/user/createNote">Crear Nota! <span>+</span></a>
+          <a class="agregarNota" href="/user/createNote">Crear Nota! <i class="fa-solid fa-circle-plus"></i></a>
         </li>
       </ul>
     </main>
