--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,6 @@
+.index_main{
+  text-align: center;
+}
 .index_main p{
         padding: 15px;
         font-weight: 700;
@@ -5,6 +8,20 @@
       font-size: 25px;
       color: rgb(241, 245, 186);
     
+}
+.ingresar{
+    background-color: rgb(0, 255, 136);
+    color:black;
+    border-radius: 25px;
+    padding: 1px 10px;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 400;
+    border-top: 2px solid rgb(39, 39, 39);
+    border-left: 2px solid rgb(39, 39, 39);
+   border-right: 4px solid rgb(26, 26, 26);
+   border-bottom: 4px solid rgb(20, 20, 20);
+
 }
 
 @media (min-width: 768px) {
