--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -26,7 +26,17 @@
  color: #ffffff;
  font-size: 20px;
 }
-
+.credencialesInvalidas{
+  color: red;
+    text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;    font-weight: 900;
+    margin-top: 2px;
+    margin-bottom: 5px;
+    background-color: rgba(0, 0, 0, 0.507);
+    border-radius: 25px;
+    position: relative;
+    font-size: 18px;
+}
 
 @media (min-width: 768px) {
     .main_login{
