--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,11 @@
     <main class="main_register">
       <h3>Registrate!</h3>
 
+      <% if (locals.errors) { %>
+     
+        <h5 class="credencialesInvalidas">   <%= locals.errors.email.msg %></h5>
+       <% } %>
+
       <form id="formRegister" method="POST">
         <div>
           <label for="name">Nombre: </label>
@@ -18,6 +23,7 @@
           <label for="email">Correo: </label>
           <input type="email" name="email" id="email" />
           <span id="emailError"></span>
+        
         </div>
         <div>
           <label for="password">Contraseña: </label>
