termine el proyecto

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,11 @@
 <p>
   NoteP@d es una aplicación web diseñada para proporcionarte un bloc de notas, donde podrás registrar una cuenta y guardar tus notas de manera segura. Con una interfaz intuitiva y funcionalidades completas, NoteP@d te ofrece una experiencia perfecta para gestionar tus pensamientos y tareas diarias.
 </p>
-<a class="ingresar" href="/user/login">Ingresar</a>
-
+<% if (!locals.userLogin) { %>
+  <a class="ingresar" href="/user/login">Ingresar</a>
+ <% } else { %>
+  <a class="ingresar" href="/user">Mis Notas</a>
+  <% } %>
     </main>
 
     <%- include('./partials/footer') %> 
