--- a/views/createNote.ejs
+++ b/views/createNote.ejs
@@ -7,6 +7,7 @@
     <!-- header -->
     <%- include('./partials/header') %>
     <main class="main_createNote">
+      <h3>Crear Nota</h3>
       <form id="formCreate" method="POST">
         <div>
           <input type="text" name="title" id="title" placeholder="Aqui ingresa el titulo"/>
