--- a/views/detailNote.ejs
+++ b/views/detailNote.ejs
@@ -9,7 +9,7 @@
     <main class="main_detail">
       <section>
         <div class="headerNote">
-                  <h1 class="title"><%= note.title %> </h1>   <p class="id"><b>Nº: </b><%= note.id %> </p>
+                  <h1 class="title"><%= note.title %> </h1>    
         </div>
 
         <p class="note"><%= note.note %></p> 
