--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -100,9 +100,9 @@ header section ul li a {
     top: 70px;
     right: -100%;
     transition: right 1s;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     border-radius: 20px;
-    width: 20%;
+    width: 30%;
     height: 250px;
 
     
@@ -123,4 +123,41 @@ header section ul li a {
   display: block;
   transition: right 1s;
 }
+}
+@media (min-width: 1024px) {
+  h1 a {
+font-size: 40px;
+ }
+  .header_menu{
+    width: 30%;
+    height: 300px;
+top:85px
+    
+    }
+    header section ul li {
+      padding: 25px;
+    
+      text-align: center;
+    }
+    
+    header section ul li a {
+      color: rgb(255, 255, 255);
+      font-weight: 900;
+      font-size: 28px;
+    }
+    header{
+      border-top: 4px solid rgb(26, 26, 26);
+      border-left: 4px solid rgb(20, 20, 20);
+      border-right: 8px solid rgb(24, 24, 24);
+    }
+
+    .header_burger i {
+      font-size: 33px;
+      padding: 8px;
+      cursor: pointer;
+      color:white;
+    
+      -webkit-text-stroke: 2px rgb(219, 219, 219);
+    }
+
 }
