--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -28,7 +28,48 @@
     .index_main p{
         font-size: 22px;
         padding: 80px;
+        font-size: 32px;
+        line-height: 60px;
 
     }
 
+}
+@media (min-width: 1024px) {
+  .index_main p{
+      font-size: 22px;
+      padding: 90px;
+      font-size: 32px;
+      line-height: 60px;
+  }
+  main{
+    border-top: 4px solid rgb(26, 26, 26);
+    border-left: 4px solid rgb(20, 20, 20);
+    border-right: 8px solid rgb(24, 24, 24);
+    border-bottom: 8px solid rgb(24, 24, 24);
+  }
+  .ingresar{
+   letter-spacing: 2px;
+    padding: 5px 20px;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+    border-top: 4px solid rgb(26, 26, 26);
+    border-left: 4px solid rgb(20, 20, 20);
+    border-right: 8px solid rgb(24, 24, 24);
+    border-bottom: 8px solid rgb(24, 24, 24);
+
+}
+.ingresar:hover{
+  letter-spacing: 2px;
+   padding: 5px 20px;
+   font-size: 30px;
+   text-transform: uppercase;
+   font-weight: 800;
+   background-color: rgb(95, 230, 167);
+   border-top: 4px solid rgb(26, 26, 26);
+   border-left: 4px solid rgb(20, 20, 20);
+   border-right: 8px solid rgb(24, 24, 24);
+   border-bottom: 8px solid rgb(24, 24, 24);
+
+}
 }
