--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -37,7 +37,7 @@
 @media (min-width: 1024px) {
   .index_main p{
       font-size: 22px;
-      padding: 90px;
+      padding: 90px 90px 40px 90px;
       font-size: 32px;
       line-height: 60px;
   }
