--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <%- include('./partials/header') %> 
     
     <main class="index_main">
+      <h2>Bienvenid@</h2>
 <p>
   NoteP@d es una aplicación web diseñada para proporcionarte un bloc de notas, donde podrás registrar una cuenta y guardar tus notas de manera segura. Con una interfaz intuitiva y funcionalidades completas, NoteP@d te ofrece una experiencia perfecta para gestionar tus pensamientos y tareas diarias.
 </p>
