agregue login con google

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,9 @@
           <span id="password2Error"></span>
         </div>
         <div class="buton_box">
-            <button type="submit">Enviar</button>
+            <button class="submitEnviarRegister" type="submit">Enviar</button>
+            <a class="googleButon" href="/auth/login/google">Iniciar con <img class="google-icon"  width="20px" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+              <h5 class="text-google">oogle</h5></a>
         </div>
       
       </form>
