--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -36,8 +36,19 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     border-radius: 25px;
     position: relative;
     font-size: 18px;
+    height: 30px;
 }
-
+.googleButon{
+  margin-top: 10px;
+  font-weight: 900;
+  padding:5px;
+  border-radius: 5px;
+  font-size: 24px;
+  text-align: center;
+  background-color: #ffffff;
+  border: 2px grey solid;
+  border-radius: 5px;
+}
 @media (min-width: 768px) {
     .main_login{
         padding-top: 30px;
