--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -86,6 +86,9 @@ width: 100%;
         transition: all 1s;
     letter-spacing: 3px;
        }
+       .submitEnviarRegister{
+        margin-top: 50px;
+       }
     }
 
 
