--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,6 +22,8 @@
           <h5 class="credencialesInvalidas">Credenciales invalidas</h5>
          <% } %>
         <button type="submit">Ingresar</button>
+        <a class="googleButon" href="/auth/login/google">Iniciar con <img class="google-icon"  width="20px" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
+        <span class="text-google">oogle</span></a>
       </form>
       <div>
         <h4>Aun no tienes cuenta?</h4>
