--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://kit.fontawesome.com/f9457e77c9.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+
 
 
 </head>
