--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -25,6 +25,7 @@ width: 90%;
     margin: 5px;
     padding: 5px;
     height: 50vh;
+    font-size: 24px;
 }
 .main_createNote form button{
     width: 95%;
